force-app/main/default/objects/JN_Defaults__mdt/JN_Defaults__mdt.object-meta.xml
<CustomObject>
    <description>custom meta data type to represent all the JN defaults.</description>
    <label>JN Defaults</label>
    <pluralLabel>JN Defaults</pluralLabel>
</CustomObject>