force-app/main/default/objects/JN_Defaults__mdt/fields/Assignment_Fee__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Fee__c</fullName>
    <defaultValue>4538.63</defaultValue>
    <label>Assignment Fee</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>