force-app/main/default/objects/JN_Defaults__mdt/fields/Average_Balance_Minimum_Pay_Number__c.field-meta.xml
<CustomField>
    <fullName>Average_Balance_Minimum_Pay_Number__c</fullName>
    <label>Average Balance % used for Minimum Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>