force-app/main/default/objects/JN_Defaults__mdt/fields/CC_Creditor_Life_CI_Protection_Rate__c.field-meta.xml
<CustomField>
    <fullName>CC_Creditor_Life_CI_Protection_Rate__c</fullName>
    <label>CC Creditor Life &amp; CI Protection Rate</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>