force-app/main/default/objects/JN_Defaults__mdt/fields/CC_Creditor_Life_Protection_Rate_Number__c.field-meta.xml
<CustomField>
    <fullName>CC_Creditor_Life_Protection_Rate_Number__c</fullName>
    <label>CC Creditor Life Protection Rate</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>