force-app/main/default/objects/JN_Defaults__mdt/fields/Credit_Card_Principal_Payment_Number__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Principal_Payment_Number__c</fullName>
    <label>Credit Card Principal Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>