force-app/main/default/objects/JN_Defaults__mdt/fields/Credit_Limit_Allowable_Max_Number__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Allowable_Max_Number__c</fullName>
    <label>Credit Limit Allowable Max</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>