force-app/main/default/objects/JN_Defaults__mdt/fields/Credit_Limit_Allowable_Threshold_Number__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Allowable_Threshold_Number__c</fullName>
    <label>Credit Limit Allowable Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>