force-app/main/default/objects/JN_Defaults__mdt/fields/Credit_Limit_Value__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Value__c</fullName>
    <label>Credit Limit Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>