force-app/main/default/objects/JN_Defaults__mdt/fields/Creditor_Life_Annual_Fee_Number__c.field-meta.xml
<CustomField>
    <fullName>Creditor_Life_Annual_Fee_Number__c</fullName>
    <label>Creditor Life Annual Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>