force-app/main/default/objects/JN_Defaults__mdt/fields/Discount_Factor_Number__c.field-meta.xml
<CustomField>
    <fullName>Discount_Factor_Number__c</fullName>
    <label>Discount Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>