force-app/main/default/objects/JN_Defaults__mdt/fields/Estimated_Stamp_Duty_Admin_Fee__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Stamp_Duty_Admin_Fee__c</fullName>
    <defaultValue>8000.00</defaultValue>
    <label>Estimated Stamp Duty &amp; Admin Fee</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>