force-app/main/default/objects/JN_Defaults__mdt/fields/GCT__c.field-meta.xml
<CustomField>
    <fullName>GCT__c</fullName>
    <label>GCT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>