force-app/main/default/objects/JN_Defaults__mdt/fields/Gold_Card_Fee__c.field-meta.xml
<CustomField>
    <fullName>Gold_Card_Fee__c</fullName>
    <label>Gold Card Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>