force-app/main/default/objects/JN_Defaults__mdt/fields/Line_Of_Credit_Creditor_Life_Rate_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Of_Credit_Creditor_Life_Rate_Number__c</fullName>
    <label>Line Of Credit Creditor Life Rate</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>