force-app/main/default/objects/JN_Defaults__mdt/fields/Line_Of_Credit_Principal_Payment_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Of_Credit_Principal_Payment_Number__c</fullName>
    <label>Line Of Credit Principal Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>