force-app/main/default/objects/JN_Defaults__mdt/fields/LOC_Credit_Limit_Percent__c.field-meta.xml
<CustomField>
    <fullName>LOC_Credit_Limit_Percent__c</fullName>
    <label>LOC Credit Limit Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>