force-app/main/default/objects/JN_Defaults__mdt/fields/LTV_Ceiling_Number__c.field-meta.xml
<CustomField>
    <fullName>LTV_Ceiling_Number__c</fullName>
    <label>LTV Ceiling</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>