force-app/main/default/objects/JN_Defaults__mdt/fields/Minimum_Credit_Allowable_Number__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Credit_Allowable_Number__c</fullName>
    <label>Minimum Credit Allowable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>