force-app/main/default/objects/JN_Defaults__mdt/fields/NSIPP_Registration_Fee__c.field-meta.xml
<CustomField>
    <fullName>NSIPP_Registration_Fee__c</fullName>
    <defaultValue>1000</defaultValue>
    <label>NSIPP Registration Fee</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>