force-app/main/default/objects/JN_Defaults__mdt/fields/Policy_Limit__c.field-meta.xml
<CustomField>
    <fullName>Policy_Limit__c</fullName>
    <label>Policy Limit</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>