force-app/main/default/objects/JN_Defaults__mdt/fields/Stamp_Duty_Uns__c.field-meta.xml
<CustomField>
    <fullName>Stamp_Duty_Uns__c</fullName>
    <defaultValue>20</defaultValue>
    <label>Stamp Duty for Unsecured Loans</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>