force-app/main/default/objects/JN_Defaults__mdt/fields/Supplementary_Card_Fee__c.field-meta.xml
<CustomField>
    <fullName>Supplementary_Card_Fee__c</fullName>
    <label>Supplementary Card Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>